--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -6,6 +6,13 @@
     <title>ChatRoom</title>
 </head>
 <body>
-    
+    <h2>WebSocket Chat Demo</h2>
+    <div>
+        <input type="text" name="inputMsg" id="msgInput" placeholder="Input your messages...">
+        <button onclick="sendMessage()">Send</button>
+    </div>
+    <div id="chatLog" style="border:1px solid #ccc; height: 200px; overflow: auto; margin-top: 10px; padding: 5px;"></div>
+
+    <script src="../statics/js/send.js"></script>
 </body>
 </html>
